# omoidasu-backend

./: .gitignore  README.md  README.rst  alembic.ini  pyproject.toml
alembic/: env.py
omoidasu_backend/: crud.py  database.py  models.py  schemas.py  server.py
omoidasu_backend/cards/: crud.py  router.py
omoidasu_backend/crud/: cards.py
omoidasu_backend/routers/: cards.py  users.py
omoidasu_backend/users/: router.py
tests/: test_omoidasu_backend.py
