[tool.poetry]
name = "omoidasu-backend"
version = "0.1.0"
description = ""
authors = ["0djentd"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
uvicorn = "^0.18.2"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
pylint = "^2.14.4"
flake8 = "^4.0.1"
mypy = "^0.961"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
